# abstract_vm

./: .Makefile.swp  CMakeLists.txt  Makefile  err  error  log  ncurses.avm  small_test.avm  test.avm  what_happens
.todo/: tasks
files/: 31_avg_simple.avm  32_avg_hard.avm  33_max_simple.avm  34_max_hard.avm  35_min_simple.avm  36_min_hard.avm  37_swap_simple.avm  38_swap_hard.avm
incs/: AvmException.hpp  IOperand.hpp  MutantStack.hpp  Operand.hpp  avm.hpp
incs/avm/: AvmController.hpp  AvmFactory.hpp  AvmModels.hpp  AvmParser.hpp  AvmView.hpp
misc/files/: 30_hard_test_by_ffouratou.avm
srcs/: AvmException.cpp  main.cpp
srcs/avm/: AvmController.cpp  AvmFactory.cpp  AvmModels.cpp  AvmParser.cpp  AvmView.cpp
